--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "test": "jest --watchAll",
     "dev-test": "nodemon dev-test"
   },
+  "jest": {
+    "testEnvironment": "node"
+  },
   "keywords": [],
   "author": "FoteinosMerg <foteinosmerg@gmail.com> (https://github.com/FoteinosMerg)",
   "license": "MIT",
@@ -27,7 +30,9 @@
     "body-parser": "^1.18.3",
     "crypto-js": "^3.1.9-1",
     "dotenv": "^6.0.0",
+    "elliptic": "^6.4.1",
     "express": "^4.16.4",
+    "uuid": "^3.3.2",
     "ws": "^6.1.0"
   }
 }
