add views functionality

--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "dotenv": "^6.0.0",
     "elliptic": "^6.4.1",
     "express": "^4.16.4",
+    "html": "^1.0.0",
+    "pug": "^2.0.3",
     "uuid": "^3.3.2",
     "ws": "^6.1.0"
   }
