--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "scripts": {
     "start": "node ./src",
     "dev": "nodemon --exec babel-node ./src",
-    "test": "jest --watchAll",
-    "dev-test": "nodemon dev-test"
+    "dev-test": "nodemon dev-test",
+    "test": "jest --watchAll"
   },
   "jest": {
     "testEnvironment": "node"
@@ -32,7 +32,6 @@
     "dotenv": "^6.0.0",
     "elliptic": "^6.4.1",
     "express": "^4.16.4",
-    "html": "^1.0.0",
     "pug": "^2.0.3",
     "uuid": "^3.3.2",
     "ws": "^6.1.0"
